// Jest Snapshot v1, https://goo.gl/fbAQLP


exports[`MastheadSearchForm invalid id at the end of the url 1`] = `
<form
  className="css-1xnpzgm"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value="https://ndla-frontend.test.api.ndla.no/article/urn:subject:100/urn:topic:1:179373/urn:resource:1:16838"
  />
  <button
    className="css-e0v71u emotion-0"
    disabled={false}
    type="submit"
  >
    <svg
      fill="currentColor"
      preserveAspectRatio="xMidYMid meet"
      height="1em"
      width="1em"
      class="c-icon c-icon--medium"
      viewBox="0 0 48 48"
      data-license="Apache License 2.0"
      data-source="Material Design"
      style="vertical-align: middle;"
    >
      <title>Search</title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla node id pasted 1`] = `
<form
  className="css-1xnpzgm"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value="#4737"
  />
  <button
    className="css-e0v71u emotion-0"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla url paste with id at the end 1`] = `
<form
  className="css-1xnpzgm"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="css-e0v71u emotion-0"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on ndla url paste with taxonomy id at the end 1`] = `
<form
  className="css-1xnpzgm"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="css-e0v71u emotion-0"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;

exports[`MastheadSearchForm redirects on old ndla url paste with new id 1`] = `
<form
  className="css-1xnpzgm"
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    placeholder=""
    type="text"
    value=""
  />
  <button
    className="css-e0v71u emotion-0"
    disabled={false}
    type="submit"
  >
    <svg
      className="c-icon c-icon--medium"
      data-license="Apache License 2.0"
      data-source="Material Design"
      fill="currentColor"
      height="1em"
      preserveAspectRatio="xMidYMid meet"
      style={
        Object {
          "color": undefined,
          "verticalAlign": "middle",
        }
      }
      viewBox="0 0 48 48"
      width="1em"
    >
      <title>
        Search
      </title>
      <g>
        <path
          d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
        />
      </g>
    </svg>
  </button>
</form>
`;
